# minitel

./: .gitignore  CHANGELOG  Cargo.toml  DEVELOPMENT.md  README.md  minitel-esp.code-workspace  minitel.code-workspace
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: ratatui.rs  websocket.rs
minitel-app-example/: Cargo.toml  cargo-config-esp.toml
minitel-app-example/assets/: README.md  index.html
minitel-app-example/assets/css/: crt.css  minitel-keyboard.css  minitel-minipavi-webmedia.css
minitel-app-example/assets/import/: minitel-keyboard.html  minitel-minipavi-webmedia.html
minitel-app-example/src/: app.rs  main.rs  main_axum.rs  main_esp.rs  main_tcp.rs  main_ws.rs
minitel-esp/: Cargo.toml
minitel-esp-example/: Cargo.toml  README.md
minitel-esp-example/.cargo/: config.toml
minitel-esp-example/src/: app.rs  main.rs
minitel-esp/.cargo/: config.toml
minitel-esp/src/: lib.rs
minitel-ratatui/: Cargo.toml
minitel-ratatui/src/: lib.rs
minitel-stum/: Cargo.toml
minitel-stum/src/: lib.rs  protocol.rs  videotex.rs
minitel-ws/: Cargo.toml
minitel-ws/src/: lib.rs
src/: axum.rs  esp.rs  futures.rs  lib.rs  ratatui.rs  stum.rs
src/stum/: protocol.rs  videotex.rs
