[package]
name = "minitel"
version = "0.1.1"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Minitel interaction library"
readme = "README.md"
repository = "https://github.com/plule/minitel"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "api-bindings", "embedded", "web-programming"]
keywords = ["minitel", "videotex", "teletel"]
exclude = [".gitignore", "*.code-workspace", ".github", ".embuild", ".vscode"]

[workspace]
members = [
    "minitel-ratatui",
    "minitel-stum",
    "minitel-ws",
    "minitel-esp",
    "minitel-app-example",
]


[dependencies]
minitel-stum = { version = "0.1.1", path = "minitel-stum" }
minitel-ws = { version = "0.1.1", path = "minitel-ws", optional = true }
minitel-esp = { version = "0.1.1", path = "minitel-esp", optional = true, default-features = false }
minitel-ratatui = { version = "0.1.1", path = "minitel-ratatui", optional = true }
ratatui = { version = "0.29.0", optional = true, default-features = false }
tungstenite = { version = "0.26.1", optional = true, default-features = false }

[features]
default = ["esp_implem"]
ws = ["dep:tungstenite", "dep:minitel-ws"]
esp = ["dep:minitel-esp"]
esp_implem = ["minitel-esp?/esp"]
ratatui = ["dep:ratatui", "dep:minitel-ratatui"]
docsrs = ["ws", "ratatui", "esp"]

[dev-dependencies]
env_logger = "0.11.6"
log = "0.4.22"
tungstenite = "0.26.1"
ratatui = { version = "0.29.0", default-features = false }

[[example]]
name = "ratatui"
required-features = ["ratatui", "ws"]

[[example]]
name = "websocket"
required-features = ["ws"]

[package.metadata.docs.rs]
no-default-features = true
features = ["docsrs"]
