[package]
name = "minitel"
version = "0.3.1"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Minitel interaction library"
readme = "README.md"
repository = "https://github.com/plule/minitel"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "api-bindings", "embedded", "web-programming"]
keywords = ["minitel", "videotex", "teletel"]
exclude = [".gitignore", "*.code-workspace", ".github", ".embuild", ".vscode"]

[workspace]
members = ["minitel-app-example"]


[dependencies]
ratatui = { version = "0.29.0", optional = true, default-features = false, features = [
    "underline-color",
] }
axum = { version = "0.8.1", default-features = false, features = [
    "ws",
], optional = true }
esp-idf-hal = { version = "0.44.1", optional = true }
num_enum = "0.7.3"
smallvec = "1.13.2"
unicode-normalization = "0.1.24"
log = "0.4.22"
futures = { version = "0.3.31", optional = true }

[features]
default = []
esp = ["dep:esp-idf-hal"]
espdoc = []
ratatui = ["dep:ratatui"]
docsrs = ["ratatui", "axum", "espdoc", "futures"]
axum = ["dep:axum"]
futures = ["dep:futures"]

[dev-dependencies]
env_logger = "0.11.6"
log = "0.4.22"
tungstenite = "0.26.1"
ratatui = { version = "0.29.0", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"

[package.metadata.docs.rs]
no-default-features = true
features = ["docsrs"]
