[package]
name = "minitel-app-example"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Example application running on a minitel"
readme = "../README.md"
repository = "https://github.com/plule/minitel"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "api-bindings", "embedded", "web-programming"]
keywords = ["minitel", "vidéotex", "télétel"]
exclude = ["*.code-workspace", ".github", ".embuild", ".vscode"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
ratatui = { version = "0.29.0", default-features = false, features = [
    "widget-calendar",
] }
strum = "0.26.3"
time = "0.3.37"
tungstenite = { version = "0.26.1", optional = true }
minitel = { version = "0.1.0", path = "..", features = ["ratatui"] }
esp-idf-svc = { version = "0.49", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
], optional = true}
tui-big-text = "0.7.0"

[features]
ws = ["minitel/ws", "dep:tungstenite"]
esp = ["minitel/esp", "dep:esp-idf-svc"]

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
