[package]
name = "minitel-app-example"
version = "0.1.1"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Example application running on a minitel"
readme = "../README.md"
repository = "https://github.com/plule/minitel"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "api-bindings", "embedded", "web-programming"]
keywords = ["minitel", "videotex", "teletel"]
exclude = ["*.code-workspace", ".github", ".embuild", ".vscode"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
ratatui = { version = "0.29.0", default-features = false, features = [
    "widget-calendar",
] }
strum = "0.26.3"
time = "0.3.37"
tungstenite = { version = "0.26.1", optional = true }
minitel = { version = "0.3.0", path = "..", features = ["ratatui"] }
esp-idf-svc = { version = "0.49", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
], optional = true}
tui-big-text = "0.7.0"
axum = { version = "0.8.1", features = ["ws"], optional = true}
open = { version = "5.3.2", optional = true }
tokio = { version = "1.43.0", features = ["rt", "net", "io-util", "macros"]}
tower-http = { version = "0.6.2", features = ["trace", "fs"], optional = true}
tracing-subscriber = { version = "0.3.19", features = ["env-filter"],  optional = true}
tracing = "0.1.41"
tokio-util = { version = "0.7.13", optional = true, features = ["compat"]}
futures = { version = "0.3.31", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true}
serde_json = { version = "1.0.136", optional = true }
base64 = { version = "0.22.1", optional = true }
clap = { version = "4.5.18", optional = true, features = ["derive"] }

[features]
esp = ["minitel/esp", "dep:esp-idf-svc"]
axum = ["minitel/axum", "tokio/rt-multi-thread", "dep:axum", "dep:tower-http", "dep:tracing-subscriber", "dep:serde", "dep:serde_json", "dep:base64", "dep:clap", "dep:open"]
tcp = ["minitel/futures", "tokio/rt-multi-thread", "dep:tokio-util", "dep:futures", "dep:tracing-subscriber"]

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
