[package]
name = "minitel-esp"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Minitel integration for ESP32 board"
readme = "../README.md"
repository = "https://github.com/plule/minitel"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "api-bindings", "embedded"]
keywords = ["minitel", "videotex", "teletel"]
exclude = ["*.code-workspace", ".github", ".embuild", ".vscode"]

[dependencies]
esp-idf-hal = "0.44.1"
minitel-stum = { version = "0.1.0", path = "../minitel-stum" }

[lib]
name = "minitel_esp"
harness = false
bench = false
doctest = false
test = false
crate-type = ["lib"]
