[package]
name = "minitel-ratatui"
version = "0.1.1"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Ratatui backend for the Minitel"
readme = "../README.md"
repository = "https://github.com/plule/minitel"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "api-bindings", "embedded"]
keywords = ["minitel", "videotex", "teletel"]
exclude = ["*.code-workspace", ".github", ".embuild", ".vscode"]

[dependencies]
minitel-stum = { version = "0.1.1", path = "../minitel-stum" }
ratatui = { version = "0.29.0", default-features = false }
