[package]
name = "minitel-stum"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Spécifications Techniques d'Utilisation du Minitel"
readme = "../README.md"
repository = "https://github.com/plule/minitel"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "api-bindings", "embedded"]
keywords = ["minitel", "vidéotex", "télétel"]
exclude = ["*.code-workspace", ".github", ".embuild", ".vscode"]

[dependencies]
log = "0.4.22"
num_enum = "0.7.3"
smallvec = "1.13.2"
unicode-normalization = "0.1.24"
